src/objects/zqu__Quote_Processing_Data__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Data_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Data Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>zqu__Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zqu__Invalid_Reason__c</fullName>
        <label>Invalid Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zqu__Quote_Number__c</fullName>
        <externalId>true</externalId>
        <label>Quote Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Session_Id__c</fullName>
        <label>Session Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Zuora_Account_Id__c</fullName>
        <label>Zuora Account Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Quote Processing Data</label>
    <nameField>
        <displayFormat>QPD-{0000000000}</displayFormat>
        <label>Quote Processing Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Processing Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>